<resources>

    <string name="app_name">AdolescenceReview</string>
    <string name="title">AdolescenceReview</string>
    <string name="sub_title">～シンプル英単語帳～</string><string name="start_buttonText">はじめる\n(Start)</string><string name="menu_settings">Settings</string>
    <string name="title_activity_start">AdolescenceReview</string>
    <string name="short_explain">これは、英単語をタッチして制限時間内に日本語の意味をタッチするアプリケーションです。\n\nThis application is touch Japanese word till ten seconds after touch English word.</string>
    <string name="toikake01">英単語をタッチしてください\n（Please touch EnglishWord.）</string>
    <string name="toikake02">日本語ではどういう意味？\n（Plaese touch Japanese word \nmeans this English word.）</string>
    <string name="ok">正解</string>
    <string name="score">SCORE</string>
    <string name="result_title">R E S U L T</string>
    <string name="result_titleJ">成　績</string><string name="score_num">0</string>
    <string name="countdown">10</string>
    <string name="timelimit">T i m e L i m i t</string>
    
    <string name="blankH">　　　　　　　　　　</string>
    <string name="numberOfQ">Number of question\n出題数</string>
    <string name="numOfMissTitle">Number of mistakes\n間違えた回数</string>
    <string name="score_resultIntent">S C O R E</string>
    <string name="hitokoto_title">「今日のひとことふたこと」</string>
    <string name="end">やめる(Quit)</string>
    <string name="return_title">タイトルにもどる(Return to Title)</string>
    
    

</resources>