<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/title"
        tools:context=".Start" />

    <TextView
        android:id="@+id/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/sub_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/SubTitle"
        android:layout_alignRight="@id/SubTitle"
        android:layout_centerVertical="true"
        android:onClick="startButton_Click"
        android:text="@string/start_buttonText" />

    <TextView
        android:id="@+id/ShortExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/StartButton"
        android:layout_alignRight="@+id/StartButton"
        android:layout_below="@+id/StartButton"
        android:layout_marginTop="40dp"
        android:text="@string/short_explain" />

</RelativeLayout>
