<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/toikake01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/toikake01"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/eword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickQuestion" />

    <TextView
        android:id="@+id/toikake02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/toikake02"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/jword00"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickjword00"
        android:visibility="invisible" />

    <Button
        android:id="@+id/jword01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickjword01"
        android:visibility="invisible" />

    <Button
        android:id="@+id/jword02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickjword02"
        android:visibility="invisible" />

    <Button
        android:id="@+id/jword03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickjword03"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <FrameLayout
            android:id="@+id/okMark"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center_horizontal"
            android:foreground="@drawable/ok"
            android:visibility="invisible" >

        </FrameLayout>

        <FrameLayout
            android:id="@+id/ngMark"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center_horizontal"
            android:foreground="@drawable/ng"
            android:visibility="invisible" >

        </FrameLayout>

        <LinearLayout
            android:id="@+id/Info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/score_num"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/timeLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="top|center_horizontal"
                android:text="@string/timelimit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/countdown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>